Fix grid-template-columns for fifty-fifty-grid
The CSS was broken in the previous already-pushed commit 🙄

--- a/slides.css
+++ b/slides.css
@@ -49,7 +49,7 @@
 
 .reveal .fifty-fifty-grid {
   display: grid;
-  grid-template-columns: repeat(minmax(0, 1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-column-gap: 1em;
 }
 
